Fix stylesheet link path in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="twitter:description" content="互動敘事、遊戲企劃與 QA。展示個人作品、技術研究、系統設計與開發筆記。">
   <meta name="twitter:image" content="/assets/og-image.jpg">
   <link rel="icon" href="assets/favicon.png">
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="./assets/css/main.css">
 
 </head>
 
