--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
         <div class="card" style="grid-column:span 12">
           <!-- 馬賽克遮罩（可互動解鎖） -->
           <div class="mosaic-cover" id="mosaicCover" role="button" aria-label="解鎖覆蓋層"></div>
-
+          <!-- 透明互動防護層：覆蓋整張卡片，阻擋選取/拖曳/複製 -->
+          <div class="mosaic-guard" id="mosaicGuard" aria-hidden="true"></div>
+          <!-- 你想直接用原始碼查看我也是沒辦法阻止你啦 -->
           <strong>歷史痕跡</strong>
           <ul>
             <li>2025 — 任職於永猷股份有限公司（ACME FILTER MASK INC.），負責電商營運與跨市場合作。</li>
@@ -286,6 +288,7 @@
       const $counter = document.getElementById('coinFloat');
       const $mosaic = document.getElementById('mosaicCover');
       const $coins = document.querySelectorAll('[data-coin]');
+      const $guard = document.getElementById('mosaicGuard');
 
       // 初始畫面
       updateCounter();
@@ -336,6 +339,34 @@
         });
       }
 
+      function onCoverClick() {
+        if (stage <= 0) return;         // 已全解
+        if (coins <= 0) {
+          // 無金幣：抖動 + 上浮提示
+          $mosaic.classList.remove('deny'); void $mosaic.offsetWidth; $mosaic.classList.add('deny');
+
+          const exists = document.querySelector('.mosaic-tip');
+          if (exists) exists.remove();
+          const tip = document.createElement('div');
+          tip.className = 'mosaic-tip';
+          tip.setAttribute('aria-hidden', 'true');
+          tip.textContent = '需要閃亮的物件才可以揭示隱藏的內容';
+          const card = $mosaic.closest('#about .card') || $mosaic.parentElement;
+          card.appendChild(tip);
+          setTimeout(() => tip.remove(), 1200);
+          return;
+        }
+        coins -= 1;
+        stage -= 1;
+        updateCounter();
+        applyMosaicStage();
+      }
+
+      // 掛在兩層：可見馬賽克層與透明防護層
+      $mosaic?.addEventListener('click', onCoverClick);
+      $guard?.addEventListener('click', onCoverClick);
+
+
       function updateCounter() {
         $counter.textContent = `🪙 ${coins}`;
         document.documentElement.classList.toggle('coins-gt0', coins > 0);
@@ -345,12 +376,30 @@
         // 3→100%, 2→66.666%, 1→33.333%, 0→0%
         const coverPct = (stage / 3) * 100;
         document.documentElement.style.setProperty('--mosaic-cover', coverPct + '%');
+        const card = $mosaic?.closest('#about .card') || $mosaic?.parentElement;
+        // 覆蓋期間整卡鎖住；完全解鎖才開放
+        card?.classList.toggle('masked', stage > 0);
         // 解鎖完成時，讓遮罩不可點
         if (stage <= 0) {
           $mosaic?.classList.add('done');
         }
       }
+      (function blockSelectionWhileMasked() {
+        const card = document.querySelector('#about .card');
+        if (!card) return;
+
+        const shouldBlock = () => card.classList.contains('masked');
+
+        // 阻止選取開始
+        card.addEventListener('selectstart', (e) => { if (shouldBlock()) e.preventDefault(); });
+        // 阻止拖曳
+        card.addEventListener('dragstart', (e) => { if (shouldBlock()) e.preventDefault(); });
+        // 阻止複製/剪下
+        card.addEventListener('copy', (e) => { if (shouldBlock()) e.preventDefault(); });
+        card.addEventListener('cut', (e) => { if (shouldBlock()) e.preventDefault(); });
+      })();
     })();
+
   </script>
 
 
