--- a/index.html
+++ b/index.html
@@ -277,139 +277,11 @@
 }
 </script>
 
+
   <!-- Coin Counter 浮動計數 -->
   <div id="coinFloat" class="coin-float" aria-live="polite" title="目前金幣"></div>
 
-  <script>
-    (function () {
-      // --- 狀態 ---
-      let coins = 0;                  // 目前金幣
-      let stage = 3;                  // 馬賽克階段：3=100%遮，2=66%，1=33%，0=完全解鎖
-      const $counter = document.getElementById('coinFloat');
-      const $mosaic = document.getElementById('mosaicCover');
-      const $coins = document.querySelectorAll('[data-coin]');
-      const $guard = document.getElementById('mosaicGuard');
-
-      // 初始畫面
-      updateCounter();
-      applyMosaicStage();
-
-      // --- 收集硬幣：點擊後該硬幣消失 +1 ---
-      $coins.forEach(btn => {
-        btn.addEventListener('click', () => {
-          if (btn.disabled) return;
-          btn.disabled = true;
-          btn.classList.add('collected'); // 動畫 & 消失
-          coins += 1;
-          updateCounter();
-        });
-      });
-
-      // --- 使用金幣解鎖馬賽克：每點一次（需 coins>0）→ 階段 -1 ---
-      if ($mosaic) {
-        $mosaic.addEventListener('click', () => {
-          if (stage <= 0) return;         // 已全解
-          if (coins <= 0) {
-            // 無金幣：抖動提示
-            $mosaic.classList.remove('deny'); void $mosaic.offsetWidth; $mosaic.classList.add('deny');
-
-            // ★ 上浮文字提示（1.2s 自動消失；多次點擊會重置動畫）
-            const exists = document.querySelector('.mosaic-tip');
-            if (exists) {
-              // 重新觸發動畫
-              exists.remove();
-            }
-            const tip = document.createElement('div');
-            tip.className = 'mosaic-tip';
-            tip.setAttribute('aria-hidden', 'true');
-            tip.textContent = '需要閃亮的物件才可以揭示隱藏的內容';
-            // 放在卡片容器上，避免被縮小的遮罩裁切
-            const card = $mosaic.closest('#about .card') || $mosaic.parentElement;
-            card.appendChild(tip);
-            // 動畫結束後移除
-            setTimeout(() => tip.remove(), 1200);
-
-            return;
-          }
-
-          coins -= 1;
-          stage -= 1;
-          updateCounter();
-          applyMosaicStage();
-        });
-      }
-
-      function onCoverClick() {
-        if (stage <= 0) return;         // 已全解
-        if (coins <= 0) {
-          // 無金幣：抖動 + 上浮提示
-          $mosaic.classList.remove('deny'); void $mosaic.offsetWidth; $mosaic.classList.add('deny');
-
-          const exists = document.querySelector('.mosaic-tip');
-          if (exists) exists.remove();
-          const tip = document.createElement('div');
-          tip.className = 'mosaic-tip';
-          tip.setAttribute('aria-hidden', 'true');
-          tip.textContent = '需要閃亮的物件才可以揭示隱藏的內容';
-          const card = $mosaic.closest('#about .card') || $mosaic.parentElement;
-          card.appendChild(tip);
-          setTimeout(() => tip.remove(), 1200);
-          return;
-        }
-        coins -= 1;
-        stage -= 1;
-        updateCounter();
-        applyMosaicStage();
-      }
-
-      // 掛在兩層：可見馬賽克層與透明防護層
-      $mosaic?.addEventListener('click', onCoverClick);
-      $guard?.addEventListener('click', onCoverClick);
-
-
-      function updateCounter() {
-        $counter.textContent = `🪙 ${coins}`;
-        document.documentElement.classList.toggle('coins-gt0', coins > 0);
-      }
-
-      function applyMosaicStage() {
-        // 3→100%, 2→66.666%, 1→33.333%, 0→0%
-        const coverPct = (stage / 3) * 100;
-        document.documentElement.style.setProperty('--mosaic-cover', coverPct + '%');
-        const card = $mosaic?.closest('#about .card') || $mosaic?.parentElement;
-        // 覆蓋期間整卡鎖住；完全解鎖才開放
-        card?.classList.toggle('masked', stage > 0);
-        // 解鎖完成時，讓遮罩不可點
-        if (stage <= 0) {
-          $mosaic?.classList.add('done');
-        }
-      }
-      (function blockSelectionWhileMasked() {
-        const card = document.querySelector('#about .card');
-        if (!card) return;
-
-        const shouldBlock = () => card.classList.contains('masked');
-
-        // 阻止選取開始
-        card.addEventListener('selectstart', (e) => { if (shouldBlock()) e.preventDefault(); });
-        // 阻止拖曳
-        card.addEventListener('dragstart', (e) => { if (shouldBlock()) e.preventDefault(); });
-        // 阻止複製/剪下
-        card.addEventListener('copy', (e) => { if (shouldBlock()) e.preventDefault(); });
-        card.addEventListener('cut', (e) => { if (shouldBlock()) e.preventDefault(); });
-      })();
-    })();
-
-  </script>
-
-
-  <script>
-    // 年份
-    document.getElementById('y').textContent = new Date().getFullYear();
-    // 可選：簡易主題切換（如需按鈕可自行加）
-    // document.documentElement.dataset.theme = 'dark';
-  </script>
-
+  <script src="./assets/js/main.js" defer></script>
 </body>
 
 </html>
