--- a/index.html
+++ b/index.html
@@ -185,8 +185,19 @@
       </div>
       <div class="grid">
         <article class="card">
-          <img src="/assets/p1.jpg" alt="分享一縮圖" style="width:100%; border-radius:12px; border:1px solid var(--border)">
-          <h3>分享一：詞靈冒險者(待填入)</h3>
+          <img src="./assets/img/sharing/fvttMod_dnd5e.jpeg" alt="NPC生成器縮圖"
+            style="width:100%; border-radius:12px; border:1px solid var(--border)">
+          <h3>FVTT MOD：DND5E NPC生成器</h3>
+          <p>一個FoundryVTT模組，可快速生成帶有名字、背景、個性、怪癖、外觀、年齡與裝備的D&D 5e NPC。</p>
+          <div>
+            <span class="chip">FoundryVTT</span><span class="chip">js</span><span class="chip">MOD</span><span
+              class="chip">DND5E</span>
+          </div>
+          <p><a class="btn" href="https://github.com/KERORO6262/npc-generator-dnd5e-fvtt/" target="_blank"
+              rel="noopener">查看</a></p>
+        </article>
+        <article class="card">
+          <h3>詞靈冒險者(待填入)</h3>
           <p>文字驅動Rogue-lite：以詞彙卡片與句子拼裝為核心戰鬥循環，模組化資料驅動。</p>
           <div>
             <span class="chip">Unity</span><span class="chip">C#</span><span class="chip">ScriptableObject</span>
@@ -194,8 +205,7 @@
           <p><a class="btn" href="#" target="_blank" rel="noopener">查看</a></p>
         </article>
         <article class="card">
-          <img src="/assets/p2.jpg" alt="分享二縮圖" style="width:100%; border-radius:12px; border:1px solid var(--border)">
-          <h3>分享二：Lock‑Eye / Chain‑Break(待填入)</h3>
+          <h3>Lock‑Eye / Chain‑Break(待填入)</h3>
           <p>2D 旋轉與連結機制原型</p>
           <div>
             <span class="chip">Unity Physics2D</span><span class="chip">Events</span><span class="chip">Modular</span>
@@ -216,7 +226,9 @@
       <div class="grid">
         <div class="card">
           <span class="badge">設計</span>
-          <h3>借鑒《上古卷軸5》式經典開鎖原型設計實作──《盜夜浪漫譚》）</h3>
+          <img src="./assets/img/writing/ES5_lock.png" alt="上古卷軸5開鎖分析圖"
+            style="width:100%; border-radius:12px; border:1px solid var(--border)">
+          <h3>借鑒《上古卷軸5》式經典開鎖原型設計實作</h3>
           <p>透過觀察《上古卷軸5》式基礎開鎖，實作開鎖遊戲的基本原型</p>
           <a class="btn" href="https://cedar-shield-b8c.notion.site/5-8955a4ea1e3c4a18852dcf68c373185d" target="_blank"
             rel="noopener">閱讀</a>
