--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <header>
     <div class="container nav">
       <div class="brand"><a href="#top">遊戲原型設計 & 互動敘事 | Badr — Silence Studio</a></div>
+      <button class="nav-toggle" aria-label="開啟選單" aria-expanded="false">☰</button>
       <nav>
         <a href="#about">關於</a>
         <a href="#sharing">分享</a>
