--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <meta charset="utf-8">
   <meta name="google-site-verification" content="DHsbzU3Tw0KzXY3zo0IkMYkqQnBHdNRGDrvdNmBqykI" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>遊戲原型設計 & 互動敘事 | Badr — Silence Studio</title>
+  <title>遊戲設計 & 互動敘事 | Badr — Silence Studio</title>
   <meta name="description" content="互動敘事、遊戲企劃與 QA。展示個人作品、技術研究、系統設計與開發筆記。">
   <meta name="color-scheme" content="light dark">
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="遊戲原型設計 & 互動敘事 | Badr — Silence Studio">
+  <meta property="og:title" content="遊戲設計 & 互動敘事 | Badr — Silence Studio">
   <meta property="og:description" content="互動敘事、遊戲企劃與 QA。展示個人作品、技術研究、系統設計與開發筆記。">
   <meta property="og:image" content="/assets/og-image.jpg">
   <meta property="og:url" content="https://KERORO6262.github.io/">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="遊戲原型設計 & 互動敘事 | Badr — Silence Studio">
+  <meta name="twitter:title" content="遊戲設計 & 互動敘事 | Badr — Silence Studio">
   <meta name="twitter:description" content="互動敘事、遊戲企劃與 QA。展示個人作品、技術研究、系統設計與開發筆記。">
   <meta name="twitter:image" content="/assets/og-image.jpg">
   <link rel="icon" href="./assets/img/favicon.ico">
@@ -46,7 +46,7 @@
 <body>
   <header>
     <div class="container nav">
-      <div class="brand"><a href="#top">遊戲原型設計 & 互動敘事 | Badr — Silence Studio</a></div>
+      <div class="brand"><a href="#top">遊戲設計 & 互動敘事 | Badr — Silence Studio</a></div>
       <button class="nav-toggle" aria-label="開啟選單" aria-expanded="false">☰</button>
       <nav>
         <a href="#about">關於</a>
@@ -93,7 +93,7 @@
     <section id="about">
       <h2>關於我</h2>
       <p class="muted">
-        我主要使用Unity進行遊戲原型開發、互動敘事系統設計與C#遊戲邏輯撰寫。擬定原型製作流程、撰寫企劃文檔與QA測試標準，並在原型階段快速驗證遊戲機制與敘事節奏。
+        我主要使用Unity進行遊戲開發、互動敘事系統設計與C#遊戲邏輯撰寫。擬定原型製作流程、撰寫企劃文檔與QA測試標準，並在原型階段快速驗證遊戲機制與敘事節奏。
       </p>
       <p class="muted">
         同時，我也是一名在寂靜中構築故事的創作者。遊戲與文字讓我得以記錄那些細小卻真實的想法，也讓開發過程不只是技術，更是觀察、感受與表達的延伸。
@@ -203,15 +203,13 @@
           <div>
             <span class="chip">Unity</span><span class="chip">C#</span><span class="chip">ScriptableObject</span>
           </div>
-          <p><a class="btn" href="#" target="_blank" rel="noopener">查看</a></p>
         </article>
         <article class="card">
           <h3>Lock‑Eye / Chain‑Break(待填入)</h3>
-          <p>2D 旋轉與連結機制原型</p>
+          <p>2D 旋轉與連結機制的原型</p>
           <div>
             <span class="chip">Unity Physics2D</span><span class="chip">Events</span><span class="chip">Modular</span>
           </div>
-          <p><a class="btn" href="#" target="_blank" rel="noopener">查看</a></p>
         </article>
       </div>
     </section>
@@ -271,9 +269,9 @@
       "@type": "WebSite",
       "@id": "https://KERORO6262.github.io/#website",
       "url": "https://KERORO6262.github.io/",
-      "name": "遊戲原型設計 & 互動敘事 | Badr — Silence Studio",
+      "name": "遊戲設計 & 互動敘事 | Badr — Silence Studio",
       "inLanguage": "zh-Hant-TW",
-      "description": "Where silence becomes stories. A studio for games, words, and fragments of imagination.",
+      "description": "吳宗華（Badr）的個人主頁：互動敘事、遊戲企劃與 QA。展示個人作品、技術研究、系統設計與開發筆記。",
       "publisher": { "@id": "https://KERORO6262.github.io/#org" },
       "about": { "@id": "https://KERORO6262.github.io/#me" },
       "potentialAction": {
@@ -354,7 +352,7 @@
             "@type": "Article",
             "@id": "https://cedar-shield-b8c.notion.site/5-8955a4ea1e3c4a18852dcf68c373185d",
             "url": "https://cedar-shield-b8c.notion.site/5-8955a4ea1e3c4a18852dcf68c373185d",
-            "headline": "借鑒《上古卷軸5》式經典開鎖原型設計實作──《盜夜浪漫譚》",
+            "headline": "借鑒《上古卷軸5》式經典開鎖原型設計實作",
             "description": "觀察《上古卷軸5》開鎖機制並實作基本原型的設計筆記。",
             "inLanguage": "zh-Hant",
             "author": { "@id": "https://KERORO6262.github.io/#me" },
@@ -370,6 +368,19 @@
             "url": "https://cedar-shield-b8c.notion.site/e3e25c94493c420dbcb405ee73586998?pvs=74",
             "headline": "差評如潮？好評如潮？",
             "description": "解析《活俠傳》上市初期的玩家評論與社群現象。",
+            "inLanguage": "zh-Hant",
+            "author": { "@id": "https://KERORO6262.github.io/#me" },
+            "isPartOf": { "@id": "https://KERORO6262.github.io/#website" }
+          },
+          {
+          "@type": "ListItem",
+          "position": 3,
+          "item": {
+            "@type": "Article",
+            "@id": "https://github.com/KERORO6262/npc-generator-dnd5e-fvtt/",
+            "url": "https://github.com/KERORO6262/npc-generator-dnd5e-fvtt/",
+            "headline": "FVTT MOD：DND5E NPC生成器",
+            "description": "一個FoundryVTT模組，可快速生成帶有名字、背景、個性、怪癖、外觀、年齡與裝備的D&D 5e NPC。",
             "inLanguage": "zh-Hant",
             "author": { "@id": "https://KERORO6262.github.io/#me" },
             "isPartOf": { "@id": "https://KERORO6262.github.io/#website" }
