--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </div>
       <div class="grid">
         <article class="card">
-          <img src="./assets/img/sharing/fvttMod_dnd5e.jpeg" alt="NPC生成器縮圖"
+          <img src="./assets/img/sharing/fvttMod_dnd5e.png" alt="FVTT中DND5E的MOD: NPC生成器banner"
             style="width:100%; border-radius:12px; border:1px solid var(--border)">
           <h3>FVTT MOD：DND5E NPC生成器</h3>
           <p>一個FoundryVTT模組，可快速生成帶有名字、背景、個性、怪癖、外觀、年齡與裝備的D&D 5e NPC。</p>
