Replace placeholder with image in index.html

--- a/index.html
+++ b/index.html
@@ -186,9 +186,8 @@
       </div>
       <div class="grid">
         <article class="card">
-          <div
-            style="width:100%; height:160px; background:var(--surface-2); border-radius:12px; border:1px solid var(--border); display:flex; align-items:center; justify-content:center; margin-bottom:1rem;">
-            <span style="color:var(--text-muted);">建議放入網站截圖 (800x400)</span>
+          <img src="./assets/img/sharing/banner.png" alt="戰鎚 40K 單位戰力計算工具"
+            style="width:100%; border-radius:12px; border:1px solid var(--border)">
           </div>
           <h3>Unit Power Scorer 40K</h3>
           <p>戰鎚 40K 單位戰力計算工具。專為桌遊玩家設計的網頁應用，可快速計算與評估單位強度分數。</p>
