Refactor project sharing section in index.html

--- a/index.html
+++ b/index.html
@@ -179,52 +179,60 @@
     <section id="sharing">
       <h2>作品分享</h2>
       <p class="muted">記錄正在做的東西、學到的技巧、還在試驗的點子。</p>
+
       <div class="list-pager" aria-label="清單分頁控制">
         <button class="btn" data-pager="prev" aria-label="上一頁" disabled>↑</button>
         <span class="muted" data-pager="status" aria-live="polite">1 / 1</span>
         <button class="btn" data-pager="next" aria-label="下一頁" disabled>↓</button>
       </div>
-      <article class="card">
-        <img src="./assets/img/sharing/banner.png" alt="戰鎚 40K 單位戰力計算工具"
-          style="width:100%; border-radius:12px; border:1px solid var(--border)">
-        <h3>Unit Power Scorer 40K</h3>
-        <p>戰鎚 40K 單位戰力計算工具。專為桌遊玩家設計的網頁應用，可快速計算與評估單位強度分數。</p>
-        <div>
-          <span class="chip">Web Tool</span>
-          <span class="chip">JavaScript</span>
-          <span class="chip">Warhammer 40K</span>
-        </div>
-        <p>
-          <a class="btn" href="https://keroro6262.github.io/unit-power-scorer-40k.github.io/" target="_blank"
-            rel="noopener">前往使用</a>
-        </p>
-      </article>
-      <article class="card">
-        <img src="./assets/img/sharing/fvttMod_dnd5e.png" alt="FVTT中DND5E的MOD: NPC生成器banner"
-          style="width:100%; border-radius:12px; border:1px solid var(--border)">
-        <h3>FVTT MOD：DND5E NPC生成器</h3>
-        <p>一個FoundryVTT模組，可快速生成帶有名字、背景、個性、怪癖、外觀、年齡與裝備的D&D 5e NPC。</p>
-        <div>
-          <span class="chip">FoundryVTT</span><span class="chip">js</span><span class="chip">MOD</span><span
-            class="chip">DND5E</span>
-        </div>
-        <p><a class="btn" href="https://github.com/KERORO6262/npc-generator-dnd5e-fvtt/" target="_blank"
-            rel="noopener">查看</a></p>
-      </article>
-      <article class="card">
-        <h3>詞靈冒險者(待填入)</h3>
-        <p>文字驅動Rogue-lite：以詞彙卡片與句子拼裝為核心戰鬥循環，模組化資料驅動。</p>
-        <div>
-          <span class="chip">Unity</span><span class="chip">C#</span><span class="chip">ScriptableObject</span>
-        </div>
-      </article>
-      <article class="card">
-        <h3>Lock‑Eye / Chain‑Break(待填入)</h3>
-        <p>2D 旋轉與連結機制的原型</p>
-        <div>
-          <span class="chip">Unity Physics2D</span><span class="chip">Events</span><span class="chip">Modular</span>
-        </div>
-      </article>
+
+      <div class="grid">
+
+        <article class="card">
+          <img src="./assets/img/sharing/banner.png" alt="戰鎚 40K 單位戰力計算工具"
+            style="width:100%; border-radius:12px; border:1px solid var(--border)">
+          <h3>Unit Power Scorer 40K</h3>
+          <p>戰鎚 40K 單位戰力計算工具。專為桌遊玩家設計的網頁應用，可快速計算與評估單位強度分數。</p>
+          <div>
+            <span class="chip">Web Tool</span>
+            <span class="chip">JavaScript</span>
+            <span class="chip">Warhammer 40K</span>
+          </div>
+          <p>
+            <a class="btn" href="https://keroro6262.github.io/unit-power-scorer-40k.github.io/" target="_blank"
+              rel="noopener">前往使用</a>
+          </p>
+        </article>
+
+        <article class="card">
+          <img src="./assets/img/sharing/fvttMod_dnd5e.png" alt="FVTT中DND5E的MOD: NPC生成器banner"
+            style="width:100%; border-radius:12px; border:1px solid var(--border)">
+          <h3>FVTT MOD：DND5E NPC生成器</h3>
+          <p>一個FoundryVTT模組，可快速生成帶有名字、背景、個性、怪癖、外觀、年齡與裝備的D&D 5e NPC。</p>
+          <div>
+            <span class="chip">FoundryVTT</span><span class="chip">js</span><span class="chip">MOD</span><span
+              class="chip">DND5E</span>
+          </div>
+          <p><a class="btn" href="https://github.com/KERORO6262/npc-generator-dnd5e-fvtt/" target="_blank"
+              rel="noopener">查看</a></p>
+        </article>
+
+        <article class="card">
+          <h3>詞靈冒險者(待填入)</h3>
+          <p>文字驅動Rogue-lite：以詞彙卡片與句子拼裝為核心戰鬥循環，模組化資料驅動。</p>
+          <div>
+            <span class="chip">Unity</span><span class="chip">C#</span><span class="chip">ScriptableObject</span>
+          </div>
+        </article>
+
+        <article class="card">
+          <h3>Lock‑Eye / Chain‑Break(待填入)</h3>
+          <p>2D 旋轉與連結機制的原型</p>
+          <div>
+            <span class="chip">Unity Physics2D</span><span class="chip">Events</span><span class="chip">Modular</span>
+          </div>
+        </article>
+
       </div>
     </section>
 
