Integrate Google Tag Manager in index.html
Added Google Tag Manager script for analytics.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
   <link rel="stylesheet" href="./assets/css/features/cat.css">
   <!-- ⑥ 響應式（共用斷點：Hero 改單欄、卡片跨欄等） -->
   <link rel="stylesheet" href="./assets/css/responsive.css">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SJJLC4XGHE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SJJLC4XGHE');
+</script>
 </head>
 
 <body>
